@@ -1,9 +1,6 @@
 new PlayerState[MAXPLAYERS + 1];
 new PlayerOnGrenade;
 
-// TODO: Enable after fix for: https://bugs.alliedmods.net/show_bug.cgi?id=3817
-// new bool:IsIntermissionCalled;
-
 /**
  * Caching information to see if there aleast a player on each team
  * Work around for game_start and game_end. Use GameCommenced for replacement
